changed the label from pizza to select

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                     <form id="formgroup">
                         <h6>Order Your Pizza</h5>
 
-                  <br> <label for="flavor">Pizza flavor:</label> 
+                  <br> <label for="flavor">Select flavor:</label> 
                      <select class="select" id="flavor" required> 
                         <option value="veggietikka">Veggie Tikka</option>
                         <option value="chickentikka">Chicken Tikka</option>
@@ -80,14 +80,14 @@
                         <option value="regina">Regina Pizza</option>
                      </select>
                             
-                       <br> <label for="size">Pizza size:</label> 
+                       <br> <label for="size">Select size:</label> 
                         <select class="select" id="size" required> 
                         <option value="small">Small</option>
                         <option value="medium">Medium</option>
                         <option value="large">Large</option>
                         </select>
 
-                   <br> <label for="crust">Pizza crust:</label> 
+                   <br> <label for="crust">Select crust:</label> 
                     <select class="select" id="crust" required> 
                         <option value="pizzabagels">Pizza Bagels@ Ksh. 200</option>
                         <option value="thin">Thin Crust @ Ksh. 100</option>
@@ -96,7 +96,7 @@
                         <option value="chicagodeepfish">Chicago Deep Dish Crust @ sh. 320</option>
                     </select>
 
-                 <br> <label for="toppings">Pizza toppings:</label> 
+                 <br> <label for="toppings">Select topping:</label> 
                     <select class="select" id="topping" required> 
                         <option value="pepperoni">Tomato @ sh. 50</option>
                         <option value="onions">Onions @ sh. 30</option>
