--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
                     </select>
                     
                     
-                  <br>  <label for="number">Number of pizzas:</label> 
+                  <br>  <label for="number">Input number:</label> 
                   <input value="" id="number" placeholder="number of pizzas">
                   <br>   <button type="submit" class="btn btn-primary" > Submit </button> 
                 </form>
