added the price for the sizes of the pizzas

--- a/index.html
+++ b/index.html
@@ -49,15 +49,15 @@
         <h4 class="hd4">Menu</h4>
             <div class="col-sm-4">
                 <img src="./images/img 6.jpg" alt="small" width="100px" height="80px">
-                <p class="text1">Small<br></p>
+                <p class="text1">Small @ sh.800<br></p>
             </div>
             <div class="col-sm-4">
                 <img src="./images/image 8.png" alt="medium" width="100px" height="80px">
-                <p class="text2">Medium<br></p>
+                <p class="text2">Medium @ sh.1200<br></p>
             </div>
             <div class="col-sm-4">
                 <img src="./images/image 7.png" alt="large" width="100px" height="80px">
-                <p class="text3">Large<br></p>
+                <p class="text3">Large @ sh.1600<br></p>
             </div>
         </div>
     </div>
