--- a/index.html
+++ b/index.html
@@ -82,9 +82,9 @@
                             
                        <br> <label for="size">Select size:</label> 
                         <select class="select" id="size" required> 
-                        <option value="small">Small</option>
-                        <option value="medium">Medium</option>
-                        <option value="large">Large</option>
+                        <option value="small">Small @ sh.800</option>
+                        <option value="medium">Medium @ sh.1200</option>
+                        <option value="large">Large @ sh.1600</option>
                         </select>
 
                    <br> <label for="crust">Select crust:</label> 
